Bug 66041 - [ivb] pageflipping with Zaphod hangs
Summary: [ivb] pageflipping with Zaphod hangs
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-22 09:38 UTC by Tomas Lindén
Modified: 2013-07-17 11:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (74.89 KB, text/plain)
2013-06-22 09:38 UTC, Tomas Lindén
no flags Details
dmesg.txt (79.76 KB, text/plain)
2013-06-22 09:39 UTC, Tomas Lindén
no flags Details
Output of xrandr --verbose (1.64 KB, text/plain)
2013-06-22 09:40 UTC, Tomas Lindén
no flags Details
xorg.conf (2.15 KB, text/plain)
2013-06-22 09:41 UTC, Tomas Lindén
no flags Details
Output of intel_reg_dumper (14.72 KB, text/plain)
2013-06-22 09:41 UTC, Tomas Lindén
no flags Details
Video BIOS dump (64.00 KB, application/octet-stream)
2013-06-22 09:43 UTC, Tomas Lindén
no flags Details

Description Tomas Lindén 2013-06-22 09:38:29 UTC
Created attachment 81201 [details]
Xorg.0.log

Setting a fullscreen resolution of 1280x1024 always hangs etracer and neverball. With a resolution of 1280x768 neither game will hang.

Linux Fedora 18 64-bit
Linux 3.9.5-201.fc18.x86_64 #1 SMP Tue Jun 11 19:40:51 UTC 2013 x86_64 x86_64 x86_64 GNU/Linux

Intel DH77DF motherboard
BIOS Information
        Vendor: Intel Corp.
        Version: KCH7710H.86A.0110.2013.0513.1018
        Release Date: 05/13/2013

xorg-x11-drv-intel-2.21.8-1.fc18.x86_64
Comment 1 Tomas Lindén 2013-06-22 09:39:30 UTC
Created attachment 81202 [details]
dmesg.txt
Comment 2 Tomas Lindén 2013-06-22 09:40:17 UTC
Created attachment 81203 [details]
Output of xrandr --verbose
Comment 3 Tomas Lindén 2013-06-22 09:41:05 UTC
Created attachment 81204 [details]
xorg.conf
Comment 4 Tomas Lindén 2013-06-22 09:41:46 UTC
Created attachment 81205 [details]
Output of intel_reg_dumper
Comment 5 Tomas Lindén 2013-06-22 09:43:07 UTC
Created attachment 81206 [details]
Video BIOS dump
Comment 6 Chris Wilson 2013-06-22 15:27:32 UTC
First step is to try 2.21.10 as that most likely has the bug fix:

commit 9b52c852aaf42dde3a7f29c065e4d5230eac7a64
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jun 6 16:40:01 2013 +0100

    sna/dri: Handle fast double flips across mode changes

But Zaphod raises a few other concerns.
Comment 7 Chris Wilson 2013-06-23 06:37:54 UTC
Fixed up the warnings from Zaphod trying to drop drmMaster too often, can you please check with xf86-video-intel.git?
Comment 8 Chris Wilson 2013-07-17 11:50:29 UTC
Timeout; presuming to be the known and fixed bug with chaining fast flips.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.